# Socket

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  appcast-nightly.xml  appcast.xml  index.html  install.sh
.github/gh-pages-seed/: README.md  appcast-nightly.xml  index.html
.github/scripts/: generate-keys.py  test_update_appcast.py  update-appcast.py
.github/workflows/: macos-notarize.yml  nightly.yml  (+2 more)
App/: AppDelegate.swift  ContentView.swift  NookApp.swift  NookCommands.swift  SocketApp.swift  SocketCommands.swift
CommandPalette/: CommandPalette.swift  CommandPaletteView.swift
Onboarding/: OnboardingView.swift
Settings/: NookSettingsService.swift  SocketSettingsService.swift
Socket/: Info.plist
Socket.xcodeproj/: project.pbxproj
SocketTests/: DialogManagerTests.swift  ExtensionPatchersTests.swift  ExtensionUtilsTests.swift  KeyboardShortcutTests.swift  MediaDetectionScriptTests.swift  OnePasswordCLITests.swift  PasswordCredentialStoreTests.swift  PasswordProviderTests.swift  ProfileManagerTests.swift  SanityTests.swift  ShieldsEngineTests.swift  ShortcutDispatchTests.swift  TabManagerTests.swift  UpdateChannelTests.swift  WebsiteShortcutDetectorTests.swift
SocketUITests/: SocketLaunchUITests.swift
Support/: open_nook_project.sh  open_socket_project.sh  run_debug_app.sh
Support/ShieldsCompiler/: .gitignore  Cargo.toml  build-xcode.sh
Support/ShieldsCompiler/resources/: build-ubo-resources.py  ubo-resources.json
Support/ShieldsCompiler/src/: lib.rs  main.rs
scripts/: add-test-target.rb  dev-launch.sh  perf-record.sh
(+312 files in other folders)
