[package]
name = "shields_compiler"
version = "0.2.0"
edition = "2021"

[lib]
# `staticlib` lets Xcode link a .a with C ABI for in-process calls from Swift.
# `rlib` keeps the existing `main.rs` subprocess path buildable as a fallback.
name = "shields_compiler"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "shields_compiler"
path = "src/main.rs"

[dependencies]
# default-features=false drops the `single-thread` feature so the
# Engine is Send+Sync — required because we hold one in a static
# `RwLock<Option<Engine>>` for the runtime cosmetic-query FFI.
adblock = { version = "0.12.1", default-features = false, features = [
    "content-blocking",
    "embedded-domain-resolver",
    "full-regex-handling",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Thin LTO + abort-on-panic shrinks the staticlib and avoids pulling in
# Rust's unwinder (which wouldn't cross the C ABI cleanly anyway).
lto = "thin"
panic = "abort"
codegen-units = 1
strip = true
